--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <h1>Aula 4 Function</h1>
+    <p> 1 - crie uma função que exiba uma mensagem no console
+  </p>
+    <p> 2 - crie uma função que receba o seu nome como (parâmetro) e exiba no console
+  </p>
+    <p> 3 - crie uma função que receba nome, idade, e um estilo musical preferido (parâmetros) e exiba no console
+  </p>
+    <p> 4 - crie uma função que receba um filme, uma música (parâmetros) e exiba no console
+  </p>
+    <p> *Bonus 5 - crie uma função que retorne o triplo do número recebido no parâmetro da função</p>
     <script src="script.js"></script>
   </body>
 </html>
